# syn

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
fsw/fprime/: CMakeLists.txt
fsw/fprime/owls/: db_new.db  owls_asdpdb_20230815.db  owls_similarity_config.json  owls_similarity_config.template
fsw/fprime/owls/assets/asdp000000000/predict/: 00003.json  00004.json  00005.json  00008.json  00020.json  00021.json  00023.json  00026.json  00030.json  00035.json  00036.json  00039.json  00043.json  00050.json  00054.json  00056.json  00067.json  00071.json  00076.json  00090.json  00101.json  00103.json  00105.json  00107.json  00111.json  00116.json  00119.json  00123.json  00124.json  00132.json  00134.json  00136.json  00138.json  00142.json  00144.json  00147.json  00149.json  00156.json  00163.json  00165.json  (+9 more)
fsw/fprime/owls/assets/asdp000000000/validate/: 2021.05.26_12.03.03.157_processing_report.txt  2021.05.26_12.03.03.157_timestats_density.csv  2021.05.26_12.03.03.157_timestats_max_intensity.csv  2021.05.26_12.03.03.157_timestats_pixeldiff.csv
fsw/fprime/owls/assets/asdp000000001/asdp/: 2019_06_21_dhm_false_low_unknown_grayscale_newport_01_dqe.csv  2019_06_21_dhm_false_low_unknown_grayscale_newport_01_sue.csv
fsw/fprime/owls/assets/asdp000000001/predict/: 00001.json  00002.json  00003.json  00007.json  00008.json  00012.json  00015.json  00016.json  00019.json  00020.json  00028.json  00032.json  00038.json  00041.json  00042.json  00046.json  00047.json  00053.json  00060.json  00076.json  00080.json  00081.json  00082.json  00085.json  00092.json  00094.json  00098.json  00101.json  00103.json  00105.json  00108.json  00116.json  00118.json
fsw/fprime/owls/assets/asdp000000001/validate/: 2019_06_21_dhm_false_low_unknown_grayscale_newport_01_timestats_mean_intensity.csv
fsw/fprime/owls/assets/asdp000000002/predict/: 00003.json  00004.json  00009.json  00011.json  00016.json  00018.json  00019.json  00020.json  00028.json  00030.json  00031.json  00036.json  (+2 more)
fsw/fprime/owls/assets/asdp000000003/: 2021_03_03_dhm_true_med_bsub_grayscale_lab_13_manifest.json
fsw/fprime/owls/bundle/: asdp000000000.tgz  asdp000000000_meta.json  asdp000000001.tgz  asdp000000001_dpmsg.json  asdp000000002_dpmsg.json  asdp000000003.tgz  asdp000000004_dpmsg.json  asdp000000004_meta.json  asdp000000005_dpmsg.json  asdp000000006_dpmsg.json  asdp000000007.tgz  asdp000000007_dpmsg.json
fsw/fprime/src/: syn_app.c  syn_app.h  syn_events.h  syn_msg.h
sim/: CMakeLists.txt
sim/inc/: syn_42_data_provider.hpp  syn_data_point.hpp  syn_data_provider.hpp  syn_hardware_model.hpp
sim/src/: syn_42_data_provider.cpp  syn_data_point.cpp  syn_data_provider.cpp  syn_hardware_model.cpp
(+893 files in other folders)
